--- a/player.html
+++ b/player.html
@@ -1,16 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>(Z)plaYer</title>
+    <title>( Zgy // Player )</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<main>         <h3>MUSICPLAYERBYZGYMACHINE</h3>
+<main>         
+<li>(redes:<button><a href="http://instagram.com/zgy.prod" >IG</a></button>
+    <button><a href="https://www.youtube.com/channel/UCAsEASyUgO0kocp0WZ_qWHw">YouTube Channel)</a></button>
+    </li>
 
 
-  
+
+  <h3>// MUSICPLAYERBYZGYMACHINE // 
+      <h3>PLAY AQUI:</h3></h3>
   
 <body>    
     <div id="player">
@@ -26,6 +30,6 @@
         </div>
     </div>
 </body><script src="js/index.js"></script>
-
+<footer>prod&codebyme</footer>
 </main>
 </html>
